--- a/dzvoice/assets/scss/components/_consult.scss
+++ b/dzvoice/assets/scss/components/_consult.scss
@@ -1328,6 +1328,7 @@
       &__form {
         margin-left: 0px;
         &-input {
+          width: 100%;
           font-family: $grotesk;
           font-style: normal;
           font-weight: 800;
