--- a/dzvoice/assets/css/style.css
+++ b/dzvoice/assets/css/style.css
@@ -275,8 +275,61 @@ body {
   .header-burger__btn span::after {
     top: 8px;
   }
+  .header-burger__wrap {
+    width: 320px;
+    height: 487px;
+    display: block;
+    background: #c0d6dc;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    padding-left: 30px;
+    padding-bottom: 50px;
+  }
+  .header-burger__logo-wrap {
+    margin-top: 30px;
+    margin-bottom: 45px;
+  }
+  .header-burger__logo-link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header-burger__logo-text {
+    margin-top: -18px;
+    font-family: "PT Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 17px;
+    letter-spacing: 0.015em;
+    color: #002939;
+  }
   .header-burger__nav {
     display: block;
+    font-family: "Cy Grotesk", sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 19px;
+    line-height: 19px;
+    letter-spacing: 0.04em;
+    margin-bottom: 100px;
+  }
+  .header-burger__item {
+    margin-bottom: 20px;
+  }
+  .header-burger__item:last-child {
+    margin-bottom: 0;
+  }
+  .header-burger__link {
+    color: #002939;
   }
   .header__request-btn {
     display: none;
@@ -305,7 +358,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     position: absolute;
-    right: 0;
+    top: 15px;
+    right: 10px;
   }
   .header-burger__btn span {
     width: 100%;
@@ -366,7 +420,7 @@ body {
     display: flex;
     position: absolute;
     top: 15px;
-    right: 0;
+    right: 10px;
   }
   .header-burger__btn span {
     width: 100%;
@@ -540,8 +594,8 @@ body {
   width: 600px;
   height: 600px;
   z-index: -3;
-  top: -216px;
-  right: -263px;
+  top: -218px;
+  right: -297px;
   background: -webkit-radial-gradient(34.13% 30.65% at 50% 48.49%, #c0d6dc 0%, rgba(196, 196, 196, 0) 100%);
   background: -o-radial-gradient(34.13% 30.65% at 50% 48.49%, #c0d6dc 0%, rgba(196, 196, 196, 0) 100%);
   background: radial-gradient(34.13% 30.65% at 50% 48.49%, #c0d6dc 0%, rgba(196, 196, 196, 0) 100%);
@@ -2999,17 +3053,20 @@ body {
     -webkit-background-size: 530px 530px;
             background-size: 530px;
   }
+  .about .container {
+    overflow: hidden;
+  }
   .about__img-bg {
-    width: 600px;
-    height: 600px;
+    width: 300px;
+    height: 300px;
     background: -webkit-radial-gradient(52.62% 44.51% at 50% 50%, #f77125 0%, rgba(196, 196, 196, 0) 100%);
     background: -o-radial-gradient(52.62% 44.51% at 50% 50%, #f77125 0%, rgba(196, 196, 196, 0) 100%);
     background: radial-gradient(52.62% 44.51% at 50% 50%, #f77125 0%, rgba(196, 196, 196, 0) 100%);
     -webkit-border-radius: 50%;
             border-radius: 50%;
     position: absolute;
-    left: -185px;
-    top: -41px;
+    left: 143px;
+    top: 569px;
     z-index: -1;
     -webkit-filter: blur(60px);
             filter: blur(60px);
@@ -3158,7 +3215,7 @@ body {
     padding-top: 10px;
     position: absolute;
     right: unset;
-    top: -1090px;
+    top: -1250px;
     left: 20px;
   }
   .about__link-arrow {
@@ -7181,6 +7238,7 @@ body {
     margin-left: 0px;
   }
   .consult-info__form-input {
+    width: 100%;
     font-family: "Cy Grotesk", sans-serif;
     font-style: normal;
     font-weight: 800;
@@ -7427,6 +7485,10 @@ body {
 
 .contacts-list__link:hover {
   color: #002939;
+}
+
+.contacts-socials-mob {
+  display: none;
 }
 
 @media screen and (max-width: 1199px) and (min-width: 992px) {
