--- a/dzvoice/assets/scss/components/_about.scss
+++ b/dzvoice/assets/scss/components/_about.scss
@@ -619,11 +619,13 @@
     padding-bottom: 100px;
     padding-top: 50px;
     background-size: 530px;
-
+    .container {
+      overflow: hidden;
+    }
     &__img {
       &-bg {
-        width: 600px;
-        height: 600px;
+        width: 300px;
+        height: 300px;
         background: radial-gradient(
           52.62% 44.51% at 50% 50%,
           #f77125 0%,
@@ -631,8 +633,8 @@
         );
         border-radius: 50%;
         position: absolute;
-        left: -185px;
-        top: -41px;
+        left: 143px;
+        top: 569px;
         z-index: -1;
         filter: blur(60px);
       }
@@ -761,7 +763,7 @@
       padding-top: 10px;
       position: absolute;
       right: unset;
-      top: -1090px;
+      top: -1250px;
       left: 20px;
       &-arrow {
         width: 25px;
