--- a/dzvoice/assets/scss/components/_contacts.scss
+++ b/dzvoice/assets/scss/components/_contacts.scss
@@ -63,6 +63,11 @@
       }
     }
   }
+  &-socials {
+    &-mob {
+      display: none;
+    }
+  }
 }
 @media screen and (max-width: 1199px) and (min-width: 992px) {
   .contacts {
