--- a/dzvoice/assets/scss/components/_header.scss
+++ b/dzvoice/assets/scss/components/_header.scss
@@ -213,8 +213,58 @@
           }
         }
       }
+      &__wrap {
+        width: 320px;
+        height: 487px;
+        display: block;
+        background: #c0d6dc;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        padding-left: 30px;
+        padding-bottom: 50px;
+      }
+      &__logo {
+        &-img {
+        }
+        &-wrap {
+          margin-top: 30px;
+          margin-bottom: 45px;
+        }
+        &-link {
+          display: flex;
+          flex-direction: column;
+        }
+        &-text {
+          margin-top: -18px;
+          font-family: $ptSans;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 13px;
+          line-height: 17px;
+          letter-spacing: 0.015em;
+          color: $mainColor;
+        }
+      }
       &__nav {
         display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 19px;
+        letter-spacing: 0.04em;
+        margin-bottom: 100px;
+      }
+      &__item {
+        margin-bottom: 20px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+      &__link {
+        color: $mainColor;
       }
     }
     &__request-btn {
@@ -243,7 +293,8 @@
         height: 22px;
         display: flex;
         position: absolute;
-        right: 0;
+        top: 15px;
+        right: 10px;
         span {
           width: 100%;
           height: 4px;
@@ -305,7 +356,7 @@
         display: flex;
         position: absolute;
         top: 15px;
-        right: 0;
+        right: 10px;
         span {
           width: 100%;
           height: 4px;
