--- a/dzvoice/assets/scss/style.scss
+++ b/dzvoice/assets/scss/style.scss
@@ -31,7 +31,12 @@ body {
 @import "./components/contacts";
 @import "./components/footer";
 // main
-
+// dolly 
+@import "./components/dolly";
+@import "./components/dolly-more";
+// dolly 
 // other
 @import "./components/custom-video";
+@import "./components/cust-btn";
+@import "./components/socials";
 // other end
