--- a/dzvoice/assets/scss/components/_dolly.scss
+++ b/dzvoice/assets/scss/components/_dolly.scss
@@ -78,3 +78,405 @@
     margin-top: 32px;
   }
 }
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .dolly {
+    padding-top: 25px;
+    padding-bottom: 108px;
+    &__bg {
+      width: 380px;
+      height: 380px;
+      position: absolute;
+      right: -3px;
+      top: 320px;
+      filter: blur(20px);
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        #f77125 0%,
+        rgba(196, 196, 196, 0) 100%
+      );
+      border-radius: 50%;
+    }
+    &__img {
+      width: 362px;
+      height: 550px;
+      &-wrap {
+        position: relative;
+        z-index: -1111;
+        margin-right: 48px;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: linear-gradient(
+              90.56deg,
+              #c0d6dc -19.58%,
+              rgba(192, 214, 220, 0.92) -12.16%,
+              rgba(192, 214, 220, 0) 26.86%,
+              rgba(192, 214, 220, 0) 69.21%,
+              rgba(192, 214, 220, 0.49) 81%,
+              #c0d6dc 96.01%
+            ),
+            linear-gradient(
+              179.97deg,
+              #c0d6dc 4.87%,
+              rgba(192, 214, 220, 0.38) 14.46%,
+              rgba(192, 214, 220, 0) 51.02%,
+              rgba(192, 214, 220, 0.31) 82.85%,
+              #c0d6dc 96.07%
+            );
+        }
+      }
+    }
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 95.5%;
+      letter-spacing: 0.04em;
+      margin-top: 170px;
+      margin-bottom: 145px;
+      span {
+        -webkit-text-stroke: 2px;
+        padding-left: 80px;
+        display: block;
+      }
+    }
+    &__btn {
+      &-link {
+      }
+      &-wrap {
+        width: 420px;
+        display: flex;
+        justify-content: flex-end;
+        margin-left: auto;
+        &::before {
+          right: -20px;
+        }
+      }
+    }
+    .socials {
+      margin-top: 32px;
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .dolly {
+    padding-top: 100px;
+    padding-bottom: 108px;
+    &__bg {
+      width: 320px;
+      height: 320px;
+      position: absolute;
+      right: -47px;
+      top: 250px;
+      filter: blur(50px);
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        #f77125 0%,
+        rgba(196, 196, 196, 0) 100%
+      );
+      border-radius: 50%;
+    }
+    .socials {
+      display: none;
+    }
+    &__img {
+      width: 301px;
+      height: 457px;
+      &-wrap {
+        position: relative;
+        z-index: -1111;
+        margin-right: 20px;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: linear-gradient(
+              90.56deg,
+              #c0d6dc -19.58%,
+              rgba(192, 214, 220, 0.92) -12.16%,
+              rgba(192, 214, 220, 0) 26.86%,
+              rgba(192, 214, 220, 0) 69.21%,
+              rgba(192, 214, 220, 0.49) 81%,
+              #c0d6dc 96.01%
+            ),
+            linear-gradient(
+              179.97deg,
+              #c0d6dc 4.87%,
+              rgba(192, 214, 220, 0.38) 14.46%,
+              rgba(192, 214, 220, 0) 51.02%,
+              rgba(192, 214, 220, 0.31) 82.85%,
+              #c0d6dc 96.07%
+            );
+        }
+      }
+    }
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin-top: 170px;
+      margin-bottom: 160px;
+      span {
+        -webkit-text-stroke: 2px;
+        padding-left: 0px;
+        display: block;
+      }
+    }
+    &__btn {
+      &-arrow {
+        width: 35px;
+        height: 35px;
+        margin-right: 37px;
+        margin-left: 0 !important;
+      }
+      &-link {
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 89%;
+        flex-direction: row-reverse;
+
+      }
+      &-wrap {
+        width: 230px;
+        display: flex;
+        justify-content: flex-end;
+        margin-left: auto;
+        &::before {
+          right: 0px;
+        }
+      }
+    }
+    .socials {
+      margin-top: 32px;
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .dolly {
+    padding-top: 100px;
+    padding-bottom: 150px;
+    &__bg {
+      width: 320px;
+      height: 320px;
+      position: absolute;
+      display: none;
+      right: -47px;
+      top: 250px;
+      filter: blur(50px);
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        #f77125 0%,
+        rgba(196, 196, 196, 0) 100%
+      );
+      border-radius: 50%;
+    }
+    .socials {
+      display: none;
+    }
+    &-wrap {
+      flex-direction: column;
+    }
+    &__img {
+      width: 301px;
+      height: 457px;
+      &-wrap {
+        width: fit-content;
+        position: relative;
+        z-index: -1111;
+        margin-right: 0px;
+        order:3;
+        &::before {
+          content: "";
+          width: 102%;
+          height: 102%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: linear-gradient(
+              90.56deg,
+              #c0d6dc -19.58%,
+              rgba(192, 214, 220, 0.92) -12.16%,
+              rgba(192, 214, 220, 0) 26.86%,
+              rgba(192, 214, 220, 0) 69.21%,
+              rgba(192, 214, 220, 0.49) 81%,
+              #c0d6dc 96.01%
+            ),
+            linear-gradient(
+              179.97deg,
+              #c0d6dc 4.87%,
+              rgba(192, 214, 220, 0.38) 14.46%,
+              rgba(192, 214, 220, 0) 51.02%,
+              rgba(192, 214, 220, 0.31) 82.85%,
+              #c0d6dc 96.07%
+            );
+        }
+      }
+    }
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin-top: 0px;
+      margin-bottom:  15px;
+      span {
+        -webkit-text-stroke: 2px;
+        padding-left: 0px;
+        display: block;
+      }
+    }
+    &__btn {
+    
+      &-arrow {
+        width: 35px;
+        height: 35px;
+        margin-right: 37px;
+        margin-left: 0 !important;
+      }
+      &-link {
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 89%;
+        flex-direction: row-reverse;
+
+      }
+      &-wrap {
+        width: 230px;
+        display: flex;
+        justify-content: flex-end;
+        margin-left: auto;
+        position: absolute !important; 
+        right: 0;
+        bottom: -67px;
+        &::before {
+          right: 0px;
+        }
+      }
+    }
+    .socials {
+      margin-top: 32px;
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .dolly {
+    padding-top: 100px;
+    padding-bottom: 150px;
+    &__bg {
+      width: 320px;
+      height: 320px;
+      position: absolute;
+      display: none;
+      right: -47px;
+      top: 250px;
+      filter: blur(50px);
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        #f77125 0%,
+        rgba(196, 196, 196, 0) 100%
+      );
+      border-radius: 50%;
+    }
+    .socials {
+      display: none;
+    }
+    &-wrap {
+      flex-direction: column;
+    }
+    &__img {
+      width: 301px;
+      height: 457px;
+      &-wrap {
+        width: fit-content;
+        position: relative;
+        z-index: -1111;
+        margin-right: 0px;
+        order:3;
+        &::before {
+          content: "";
+          width: 102%;
+          height: 102%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background: linear-gradient(
+              90.56deg,
+              #c0d6dc -19.58%,
+              rgba(192, 214, 220, 0.92) -12.16%,
+              rgba(192, 214, 220, 0) 26.86%,
+              rgba(192, 214, 220, 0) 69.21%,
+              rgba(192, 214, 220, 0.49) 81%,
+              #c0d6dc 96.01%
+            ),
+            linear-gradient(
+              179.97deg,
+              #c0d6dc 4.87%,
+              rgba(192, 214, 220, 0.38) 14.46%,
+              rgba(192, 214, 220, 0) 51.02%,
+              rgba(192, 214, 220, 0.31) 82.85%,
+              #c0d6dc 96.07%
+            );
+        }
+      }
+    }
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin-top: 0px;
+      margin-bottom:  15px;
+      span {
+        -webkit-text-stroke: 2px;
+        padding-left: 0px;
+        display: block;
+      }
+    }
+    &__btn {
+    
+      &-arrow {
+        width: 35px;
+        height: 35px;
+        margin-right: 37px;
+        margin-left: 0 !important;
+      }
+      &-link {
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 89%;
+        flex-direction: row-reverse;
+
+      }
+      &-wrap {
+        width: 230px;
+        display: flex;
+        justify-content: flex-end;
+        margin-left: auto;
+        position: absolute !important; 
+        right: 0;
+        bottom: -67px;
+        &::before {
+          right: 0px;
+        }
+      }
+    }
+    .socials {
+      margin-top: 32px;
+    }
+  }
+}
