--- a/dzvoice/assets/scss/style.scss
+++ b/dzvoice/assets/scss/style.scss
@@ -34,6 +34,7 @@ body {
 // dolly 
 @import "./components/dolly";
 @import "./components/dolly-more";
+@import "./components/dolly-videos";
 // dolly 
 // other
 @import "./components/custom-video";
