--- a/dzvoice/assets/scss/components/_custom-video.scss
+++ b/dzvoice/assets/scss/components/_custom-video.scss
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 948px;
-  height: 523px;
+  width: 100%;
+  height: 100%;
   border-radius: 0px 50px;
   &__preview {
     width: 100%;
