--- a/dzvoice/assets/scss/style.scss
+++ b/dzvoice/assets/scss/style.scss
@@ -36,6 +36,21 @@ body {
 @import "./components/dolly-more";
 @import "./components/dolly-videos";
 // dolly 
+// course 
+@import "./components/course-offer";
+@import "./components/course-result";
+@import "./components/_reviews";
+@import "./components/reviews-slider";
+// course 
+// lessons 
+@import "./components/lessons-offer";
+@import "./components/lessons-info";
+@import "./components/lessons-entry";
+// lessons 
+// blog 
+@import "./components/blog-offer";
+@import "./components/blog";
+// blog 
 // other
 @import "./components/custom-video";
 @import "./components/cust-btn";
