--- a/dzvoice/assets/scss/style.scss
+++ b/dzvoice/assets/scss/style.scss
@@ -51,6 +51,12 @@ body {
 @import "./components/blog-offer";
 @import "./components/blog";
 // blog 
+// article 
+@import "./components/article";
+// article 
+// 404 
+@import "./components/404";
+// 404 
 // other
 @import "./components/custom-video";
 @import "./components/cust-btn";
