--- a/dzvoice/assets/scss/components/_blog-offer.scss
+++ b/dzvoice/assets/scss/components/_blog-offer.scss
@@ -27,3 +27,137 @@
     }
   }
 }
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .blog-offer {
+    padding-top: 244px;
+    padding-bottom: 100px;
+    position: relative;
+    &__bg {
+      width: 100%;
+      height: 100%;
+      z-index: -100;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-image: url("../img/blog/offer/bg.png");
+      background-repeat: no-repeat;
+    }
+    &__title {
+      width: fit-content;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 95.5%;
+      letter-spacing: 0.04em;
+      margin: 0 auto 259px;
+      span {
+        display: block;
+      }
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .blog-offer {
+    padding-top: 100px;
+    padding-bottom: 0px;
+    position: relative;
+    &__bg {
+      width: 100%;
+      height: 100%;
+      z-index: -100;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-image: url("../img/blog/offer/bg.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+    &__title {
+      width: fit-content;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin: 0 auto 259px;
+      span {
+        display: block;
+      }
+    }
+    .socials {
+      display: none;
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .blog-offer {
+    padding-top: 175px;
+    padding-bottom: 200px;
+    position: relative;
+    &__bg {
+      width: 100%;
+      height: 100%;
+      z-index: -100;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-image: url("../img/blog/offer/bg.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: -300px 0;
+    }
+    &__title {
+      width: fit-content;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin: 0 auto 259px;
+      span {
+        display: block;
+      }
+    }
+    .socials {
+      display: none;
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .blog-offer {
+    padding-top: 100px;
+    padding-bottom: 318px;
+    position: relative;
+    &__bg {
+      width: 100%;
+      height: 100%;
+      z-index: -100;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-image: url("../img/blog/offer/bg.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: -300px 0;
+    }
+    &__title {
+      width: fit-content;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin: 0 auto 259px;
+      span {
+        display: block;
+      }
+    }
+    .socials {
+      display: none;
+    }
+  }
+}
