--- a/dzvoice/assets/scss/components/_blog.scss
+++ b/dzvoice/assets/scss/components/_blog.scss
@@ -19,6 +19,7 @@
       background-color: #dc4a8c;
       position: absolute;
       left: -20px;
+      top: 0;
     }
   }
   &__list {
@@ -34,11 +35,13 @@
       flex-direction: row-reverse;
 
       .blog__article-img {
+        max-width: 703px;
+        max-height: 438px;
         margin-right: 0;
         margin-left: 40px;
       }
       .blog__article-content {
-        width: 360px;
+        width: fit-content;
       }
       .blog__article-desc {
         height: 235px;
@@ -48,9 +51,12 @@
       }
     }
     &-img {
-      max-width: 703px;
-      max-height: 438px;
+      max-width: 360px;
+      max-height: 416px;
       margin-right: 40px;
+      &-mob {
+        display: none;
+      }
     }
     &-content {
       margin: 0;
@@ -122,6 +128,562 @@
         color: #fff;
         background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
         border: 1px solid #ffffff;
+      }
+    }
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .blog {
+    padding-top: 120px;
+    padding-bottom: 150px;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+      padding-top: 10px;
+      position: relative;
+      margin-bottom: 100px;
+      &::before {
+        content: "";
+        width: 380px;
+        height: 2px;
+        background-color: #dc4a8c;
+        position: absolute;
+        left: -20px;
+      }
+    }
+    &__list {
+      margin-bottom: 200px;
+    }
+    &__article {
+      display: flex;
+      margin-bottom: 50px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:nth-child(2n + 2) {
+        flex-direction: row-reverse;
+
+        .blog__article-img {
+          max-width: 620px;
+          max-height: 438px;
+          margin-right: 0;
+          margin-left: 20px;
+        }
+        .blog__article-content {
+          width: fit-content;
+        }
+        .blog__article-desc {
+          height: 190px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          padding: 5px;
+        }
+      }
+      &-img {
+        max-width: 298px;
+        max-height: 314px;
+        margin-right: 20px;
+      }
+      &-content {
+        margin: 0;
+        height: fit-content;
+        padding-bottom: 30px;
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          bottom: 0;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 23px;
+        letter-spacing: 0.04em;
+        margin-bottom: 30px;
+      }
+      &-desc {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        margin-bottom: 24px;
+      }
+      &-link {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #dc4a8c;
+      }
+    }
+    &__pagination {
+      display: flex;
+      align-items: center;
+      &-item {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 101.5%;
+        letter-spacing: 0.04em;
+        border: 1px solid #002939;
+        margin-right: 30px;
+        transition: all 0.5s ease;
+        &:hover {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+        &--active {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .blog {
+    padding-top: 50px;
+    padding-bottom: 150px;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+      padding-top: 10px;
+      position: relative;
+      margin-bottom: 100px;
+      &::before {
+        content: "";
+        width: 380px;
+        height: 2px;
+        background-color: #dc4a8c;
+        position: absolute;
+        left: -20px;
+      }
+    }
+    &__list {
+      margin-bottom: 200px;
+    }
+    &__article {
+      display: flex;
+      margin-bottom: 50px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:nth-child(2n + 2) {
+        flex-direction: row-reverse;
+
+        .blog__article-img {
+          max-width: 298px;
+          max-height: 298px;
+          margin-right: 0;
+          margin-left: 20px;
+        }
+        .blog__article-content {
+          width: fit-content;
+        }
+        .blog__article-desc {
+          height: 190px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          padding: 5px;
+        }
+      }
+      &-img {
+        max-width: 298px;
+        max-height: 298px;
+        margin-right: 20px;
+      }
+      &-content {
+        margin: 0;
+        height: fit-content;
+        padding-bottom: 30px;
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          bottom: 0;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 23px;
+        letter-spacing: 0.04em;
+        margin-bottom: 30px;
+      }
+      &-desc {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        margin-bottom: 20px;
+      }
+      &-link {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #dc4a8c;
+      }
+    }
+    &__pagination {
+      display: flex;
+      align-items: center;
+      &-item {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 101.5%;
+        letter-spacing: 0.04em;
+        border: 1px solid #002939;
+        margin-right: 30px;
+        transition: all 0.5s ease;
+        &:hover {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+        &--active {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .blog {
+    padding-top: 50px;
+    padding-bottom: 100px;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+      padding-top: 10px;
+      position: relative;
+      margin-bottom: 100px;
+      &::before {
+        content: "";
+        width: 380px;
+        height: 2px;
+        background-color: #dc4a8c;
+        position: absolute;
+        left: -20px;
+      }
+    }
+    &__list {
+      margin-bottom: 100px;
+    }
+    &__article {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 50px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:nth-child(2n + 2) {
+        flex-direction: row-reverse;
+
+        .blog__article-img {
+          margin-right: 0;
+          margin-left: 20px;
+          &-mob {
+            width: 460px;
+            height: 300px;
+          }
+        }
+        .blog__article-content {
+          width: fit-content;
+        }
+        .blog__article-desc {
+          height: 190px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          padding: 5px;
+        }
+      }
+      &-img {
+        margin-right: 20px;
+        display: none;
+        &-mob {
+          display: block;
+          width: 460px;
+          height: 300px;
+          object-fit: cover;
+          margin-bottom: 30px;
+        }
+      }
+      &-content {
+        margin: 0;
+        height: fit-content;
+        padding-bottom: 30px;
+        position: relative;
+        &::before {
+          display: none;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 0.04em;
+        margin-bottom: 30px;
+        text-align: right;
+        position: relative;
+        padding-top: 5px;
+        margin-right: 60px;
+        &::before {
+          content: "";
+          width: 300px;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          top: 0;
+        }
+      }
+      &-desc {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 17px;
+        letter-spacing: 0.04em;
+        margin-bottom: 30px;
+      }
+      &-link {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #dc4a8c;
+      }
+    }
+    &__pagination {
+      display: flex;
+      align-items: center;
+      &-item {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 17px;
+        letter-spacing: 0.04em;
+        border: 1px solid #002939;
+        margin-right: 30px;
+        transition: all 0.5s ease;
+        &:hover {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+        &--active {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .blog {
+    padding-top: 50px;
+    padding-bottom: 100px;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+      padding-top: 10px;
+      position: relative;
+      margin-bottom: 100px;
+      &::before {
+        content: "";
+        width: 230px;
+        height: 2px;
+        background-color: #dc4a8c;
+        position: absolute;
+        left: -20px;
+      }
+    }
+    &__list {
+      margin-bottom: 100px;
+    }
+    &__article {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 50px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:nth-child(2n + 2) {
+        flex-direction: row-reverse;
+
+        .blog__article-img {
+          margin-right: 0;
+          margin-left: 20px;
+          &-mob {
+            width: 300px;
+            height: 300px;
+          }
+        }
+        .blog__article-content {
+          width: fit-content;
+        }
+        .blog__article-desc {
+          height: 190px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          padding: 5px;
+        }
+      }
+      &-img {
+        margin-right: 20px;
+        display: none;
+        &-mob {
+          display: block;
+          width: 300px;
+          height: 300px;
+          object-fit: cover;
+          margin-bottom: 30px;
+        }
+      }
+      &-content {
+        margin: 0;
+        height: fit-content;
+        padding-bottom: 30px;
+        position: relative;
+        &::before {
+          display: none;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 0.04em;
+        margin-bottom: 30px;
+        text-align: right;
+        position: relative;
+        padding-top: 5px;
+        margin-right: 0px;
+        &::before {
+          content: "";
+          width: 230px;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          top: 0;
+        }
+      }
+      &-desc {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 17px;
+        letter-spacing: 0.04em;
+        margin-bottom: 30px;
+      }
+      &-link {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: #dc4a8c;
+      }
+    }
+    &__pagination {
+      display: flex;
+      align-items: center;
+      &-item {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 17px;
+        letter-spacing: 0.04em;
+        border: 1px solid #002939;
+        margin-right: 30px;
+        transition: all 0.5s ease;
+        &:hover {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
+        &--active {
+          color: #fff;
+          background: linear-gradient(91.86deg, #dc4a8c 0.68%, #f77125 91.47%);
+          border: 1px solid #ffffff;
+        }
       }
     }
   }
